objects/ASI_KOR_Venue_Depletion_Detail__c.object
<CustomObject>
    <description>This custom object represents the Venue Depletion Header info for Pernod Ricard Korea</description>
    <fields>
        <fullName>ASI_KOR_Item_Group_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group Code</label>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Venue Depletion Details</relationshipLabel>
        <relationshipName>Venue_Depletion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Name__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.ASI_KOR_Item_Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_KPI_Point_Value__c</fullName>
        <label>KPI Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Pay_Type__c</fullName>
        <label>Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Pay</fullName>
                </value>
                <value>
                    <fullName>Normal-Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_DepleDetail_ID__c</fullName>
        <externalId>true</externalId>
        <label>SYS_INFO_DepleDetail_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Special_Item_Group__c</fullName>
        <formula>AND (
    ISPICKVAL(ASI_KOR_Item_Group_Code__r.ASI_KOR_Sub_Brand__r.ASI_KOR_Brand__r.ASI_KOR_UOM__c, &apos;Bottle&apos;),   
    ASI_KOR_Item_Group_Code__r.ASI_KOR_Standard_Bottle_Size__c = 350,
    ASI_KOR_Item_Group_Code__r.ASI_KOR_Btl_Unit_Case__c = 12
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Item Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sub_Brand__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.ASI_KOR_Sub_Brand__r.Name</formula>
        <label>Sub-Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Cost_Per_Bottle_Number__c</fullName>
        <formula>if(ASI_KOR_Venue_Depl_Actual_Volume__c=0,0,ASI_KOR_Venue_Depl_Promotion_Number__c / ASI_KOR_Venue_Depl_Actual_Volume__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost Per Bottle (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Cost_Per_Case_Number__c</fullName>
        <formula>if(ASI_KOR_Venue_Depl_Actual_Case__c=0,0,ASI_KOR_Venue_Depl_Promotion_Number__c / ASI_KOR_Venue_Depl_Actual_Case__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost Per Case (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Actual_Case__c</fullName>
        <formula>if(ASI_KOR_Special_Item_Group__c,
ASI_KOR_Venue_Depl_Info_Depletion_Case__c/2,
ASI_KOR_Venue_Depl_Info_Depletion_Case__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Quantity (Cases)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Actual_Volume__c</fullName>
        <formula>if(ASI_KOR_Special_Item_Group__c,
ASI_KOR_Venue_Depl_Info_Depletion_Volume__c/2,
ASI_KOR_Venue_Depl_Info_Depletion_Volume__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Quantity (Bottles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Converted_QTY_CASE__c</fullName>
        <label>Converted Qty (Case)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Info_Depletion_Case__c</fullName>
        <label>Quantity (Cases)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Info_Depletion_Volume__c</fullName>
        <label>Quantity (Bottles)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Info_Promotion_Amount__c</fullName>
        <label>Promotion Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Info_Promotion_Period__c</fullName>
        <label>Promotion Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Info_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Info_Shipment_Date__c</fullName>
        <label>Depletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depl_Promotion_Number__c</fullName>
        <formula>ASI_KOR_Venue_Depl_Info_Promotion_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Amount (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Depletion__c</fullName>
        <label>Venue Depletion</label>
        <referenceTo>ASI_KOR_Venue_Depletion__c</referenceTo>
        <relationshipLabel>Venue Depletion Details</relationshipLabel>
        <relationshipName>Venue_Depletion_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Venue Depletion Detail</label>
    <nameField>
        <displayFormat>VDD-{00000}</displayFormat>
        <label>Venue Depletion Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venue Depletion Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>